add basic frontend stuff

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,2 +1,6 @@
-<div class="w3-green">Something here dammit</div>
-<router-outlet></router-outlet>
+<div class="app-background w3-dark-grey">
+  <app-header></app-header>
+  <router-outlet>
+    
+  </router-outlet>
+</div>
