--- a/Client/src/app/components/presenter/presenter.component.html
+++ b/Client/src/app/components/presenter/presenter.component.html
@@ -1,3 +1,12 @@
-<div class="w3-container">
-    
+<div *ngIf="dataLoaded" class="w3-container">
+    <div class="w3-row w3-container">
+        <br/>
+        <div class="w3-container w3-twothird w3-blue-gray">
+            <div *ngFor="let cocktail of cocktails">
+                <app-cocktail [cocktail]="cocktail"></app-cocktail>
+            </div>
+        </div>
+
+        <div class="w3-container w3-third w3-gray">Just fuck</div>
+    </div>
 </div>
