--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,6 +1,5 @@
 <div class="app-background w3-dark-grey">
   <app-header></app-header>
-  <router-outlet>
-    
-  </router-outlet>
+  <router-outlet></router-outlet>
+  <app-page-loader></app-page-loader>
 </div>
