--- a/Client/src/app/shared/page-loader/page-loader.component.html
+++ b/Client/src/app/shared/page-loader/page-loader.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="status.loading" class="loader-container w3-display-container">
-    <p class="w3-panel w3-orange w3-display-middle">
+    <p class="loader-message w3-panel w3-orange w3-display-middle">
         {{ status.message }}
     </p>
 </div>
