--- a/Client/src/app/components/presenter/presenter.component.html
+++ b/Client/src/app/components/presenter/presenter.component.html
@@ -1,4 +1,14 @@
 <div *ngIf="dataLoaded" class="w3-container">
+    <div class="w3-row">
+        <p>
+            This is the core of the program.
+            Select whether or not you wish to save each change upon editing,
+            or run a batch of commands when clicking on 'save' button
+        </p>
+    </div>
+    <div class="w3-row button-container">
+        <button (click)="toggleSavingType()" class="btn">Turn {{ _eConvert[savingType] }} on</button>
+    </div>
     <div class="w3-row w3-container">
         <br />
         <div class="w3-container w3-twothird w3-blue-gray">
@@ -7,6 +17,10 @@
             </div>
         </div>
 
-        <div class="w3-container w3-third w3-gray">Just fuck</div>
+        <div class="w3-container w3-third w3-gray">Tasty text placeholder</div>
+    </div>
+
+    <div>
+        <button [ngClass]="(saveBtnEnabled) ? 'btn' : 'btn-disabled'">Save</button>
     </div>
 </div>
