--- a/Client/src/app/components/presenter/event-panel/event-panel.component.html
+++ b/Client/src/app/components/presenter/event-panel/event-panel.component.html
@@ -2,10 +2,10 @@
     <h3 class="w3-center">Event Collection</h3>
     <hr/>
 
-    <div class="w3-container w3-center">
+    <div *ngIf="dataLoaded" class="w3-container w3-center">
         <div class="w3-container event-container">
-            <span *ngFor="let event of events" class="event-block">
-                {{event}}
+            <span *ngFor="let event of events; let i = index" class="event-block">
+                event number: {{ i }}
             </span>
         </div>
     </div>
