--- a/Client/src/app/components/presenter/presenter.component.html
+++ b/Client/src/app/components/presenter/presenter.component.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="w3-third w3-teal">
-            <app-event-panel></app-event-panel>
+            <app-event-panel #eventPanel></app-event-panel>
         </div>
     </div>
 
