--- a/Client/src/app/components/presenter/cocktail/cocktail.component.html
+++ b/Client/src/app/components/presenter/cocktail/cocktail.component.html
@@ -1,8 +1,17 @@
 <div class="w3-container">
     <details>
         <summary>
-            {{ cocktail.name }}
-            <button class="w3-button w3-large w3-circle w3-xlarge">-</button>
+            <div class="w3-row">
+                <div class="w3-third">{{ cocktail.name }}</div>
+                <div class="w3-twothird">
+                    <button class="w3-button w3-circle">
+                        <i class="fas fa-blender"></i>
+                    </button>
+                    <button (click)="deleteCocktail()" class="w3-button w3-circle">
+                        <i class="fas fa-skull-crossbones"></i>
+                    </button>
+                </div>
+            </div>
         </summary>
         <div>
             <div *ngFor="let ingredient of cocktail.ingredients">
