--- a/Client/src/app/components/presenter/presenter.component.html
+++ b/Client/src/app/components/presenter/presenter.component.html
@@ -12,7 +12,9 @@
     <br/>
     <div class="w3-row w3-container">
         <div class="w3-twothird w3-pale-blue">
-            <button (click)="createCocktail()" class="w3-button w3-large w3-circle w3-xlarge">+</button>
+            <button (click)="createCocktail()" class="w3-button w3-large w3-circle w3-xlarge">
+                <i class="fas fa-cocktail"></i>
+            </button>
             <br />
             <div class="w3-container w3-twothird w3-blue-gray">
                 <div *ngFor="let cocktail of cocktails">
@@ -22,7 +24,7 @@
         </div>
 
         <div class="w3-third w3-teal">
-            <app-event-panel #eventPanel></app-event-panel>
+            <app-event-panel #eventPanel [localChangesEnabled]="saveBtnEnabled"></app-event-panel>
         </div>
     </div>
 
