--- a/Client/src/app/components/presenter/presenter.component.html
+++ b/Client/src/app/components/presenter/presenter.component.html
@@ -6,7 +6,7 @@
             or run a batch of commands when clicking on 'save' button
         </p>
         <div class="w3-row button-container">
-            <button (click)="toggleSavingType()" class="btn">Turn {{ _eConvert[savingType] }} on</button>
+            <button (click)="toggleSavingType()" class="btn">{{ toggleButtonMesage }}</button>
         </div>
     </div>
     <br/>
