--- a/Client/src/app/components/presenter/presenter.component.html
+++ b/Client/src/app/components/presenter/presenter.component.html
@@ -5,13 +5,21 @@
             Select whether or not you wish to save each change upon editing,
             or run a batch of commands when clicking on 'save' button
         </p>
-        <div class="w3-row button-container">
-            <button (click)="toggleSavingType()" class="btn">{{ toggleButtonMesage }}</button>
+        <div class="w3-row">
+            <div class="button-container w3-quarter">
+                <button (click)="toggleSavingType()" class="btn">{{ toggleButtonMesage }}</button>
+            </div>
+            <div
+                class="w3-leftbar w3-threequarter"
+                [ngClass]="{'w3-border-blue w3-yellow' : !saveBtnEnabled }"
+                [ngClass]="{'w3-border-red w3-pale-red' : saveBtnEnabled }">
+                {{ savingInfo }}
+            </div>
         </div>
     </div>
     <br/>
     <div class="w3-row w3-container">
-        <div class="w3-twothird w3-pale-blue">
+        <div class="w3-twothird">
             <button (click)="createCocktail()" class="w3-button w3-large w3-circle w3-xlarge">
                 <i class="fas fa-cocktail"></i>
             </button>
@@ -32,3 +40,5 @@
         <button [ngClass]="(saveBtnEnabled) ? 'btn' : 'btn-disabled'">Save</button>
     </div>
 </div>
+
+<create-cocktail-dialog #createDialog></create-cocktail-dialog>
