--- a/Client/src/app/components/index/index.component.html
+++ b/Client/src/app/components/index/index.component.html
@@ -1,12 +1,9 @@
-<div class="index-container w3-container w3-center">
-    <div class="w3-panel">
-        <span class="index-header w3-red">Change Tracer</span>
-        <br/>
-        CQRS with (bad) Event Sourcing
-    </div>
-
-    <div class="w3-panel w3-pale-yellow">
-        Instead of the 'About Page', if you came this far, you probably know what to expect.
-        Click that button in the navigation to get to the real thing.
+<div
+    class="index-container w3-container w3-center">
+    <div class="w3-panel index-header">
+        This app is an excersise in implementing functionality that enables 
+        <u>saving</u>, <u>tracking</u> and <u>reverting</u> multiple changes.
+        <hr/>
+        Use navigation panel on the left (it will appear on hover), to get to other pages.
     </div>
 </div>
