--- a/Client/src/app/components/header/header.component.html
+++ b/Client/src/app/components/header/header.component.html
@@ -1,4 +1,5 @@
-<div class="header-container w3-container w3-center w3-black">
-    <div (click)="navigate('')" class="w3-half">Index</div>
-    <div (click)="navigate('presenter')" class="w3-half">The Real Thing</div>
+<div
+    (click)="backToIndex()"
+    class="header-container w3-container w3-center w3-black">
+    <h1>Change Tracer</h1>
 </div>
