--- a/Client/src/app/shared/page-loader/page-loader.component.scss
+++ b/Client/src/app/shared/page-loader/page-loader.component.scss
@@ -12,6 +12,15 @@
   animation-iteration-count: infinite;
 }
 
+.no-select {
+    -webkit-user-select: none; /* Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+    text-align: center;
+    text-decoration: none;
+}
+
 @keyframes loadanim {
   0% {
     background: linear-gradient(
