--- a/Client/src/styles.scss
+++ b/Client/src/styles.scss
@@ -7,6 +7,10 @@ $text-highlighted: yellow;
 
 $background-dark: #444;
 
+.outln {
+    outline: none !important;
+}
+
 .btn {
     border: 2px solid transparent;
     border-top: 2px solid silver;
@@ -37,8 +41,8 @@ $background-dark: #444;
 
 .dialog {
     z-index: 999;
-    min-width: 100%;
-    min-height: 100%;
+    min-width: 100vw;
+    min-height: 100vh;
     position: absolute;
     background-color: rgba(0,0,0,.4);
     display: flex;
