--- a/Client/src/app/components/app-components/ingredients/create-ingredient-dialog/create-ingredient-dialog.scss
+++ b/Client/src/app/components/app-components/ingredients/create-ingredient-dialog/create-ingredient-dialog.scss
@@ -1,18 +1,8 @@
-.displayed {
-    display: block;
-}
+@import '../../../../../styles.scss';
 
-.hidden {
-    display: none;
-}
-
-.mmodal {
-    // makes it hover above all elements
-    z-index: 1000;
-    position: fixed;
-    top: 30px;
-    bottom: 0;
-    left: 300px;
-    width: 500px;
-    background: rgba(0,0,0, .4);
+.dialog-content {
+    width: 50%;
+    background: whitesmoke;
+    margin: auto;
+    color: black;
 }
