Changes: MainCommand<T> rewritten to CommandPayloadService, ManualMapper - inner collection mapping for null objects - hotfix CommandService comparing enums with existing commands - fix in progress

--- a/Client/src/app/components/app-components/ingredients/ingredients.component.html
+++ b/Client/src/app/components/app-components/ingredients/ingredients.component.html
@@ -21,7 +21,7 @@
             <h3 class="w3-center">Local changes</h3>
             <hr/>
             <div>
-                <button>Save Changes</button>
+                <button (click)="saveChanges()">Save Changes</button>
                 <button (click)="undo()">Undo</button>
             </div>
         </div>
