--- a/Client/src/app/components/header/header.component.html
+++ b/Client/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header-container w3-container w3-center header-dark">
-    <h1 class="header-dark">Change Tracer</h1>
+    <h1 class="noselect font-andromeda header-dark">Change Tracer</h1>
 </div>
 
 <div class="flip-card">
