--- a/Client/src/app/components/index/index.component.html
+++ b/Client/src/app/components/index/index.component.html
@@ -4,6 +4,6 @@
         This app is an excersise in implementing functionality that enables 
         <u>saving</u>, <u>tracking</u> and <u>reverting</u> multiple changes.
         <hr/>
-        Use navigation panel on the left (it will appear on hover), to get to other pages.
+        Use the navigation panel above (it will appear on hover), to get to other pages.
     </div>
 </div>
