confirm dialog - WIP

--- a/Client/src/app/components/app-components/ingredients/ingredients.component.html
+++ b/Client/src/app/components/app-components/ingredients/ingredients.component.html
@@ -16,7 +16,6 @@
             </div>
         </div>
 
-
         <div class="w3-third">
             <h3 class="w3-center">Local changes</h3>
             <hr/>
@@ -34,6 +33,8 @@
         </div>
     </div>
 </div>
+
+<button (click)="test()">Confirm Test</button>
 
 <app-create-ingredient-dialog 
     #acid
