--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-page-loader></app-page-loader>
+<app-confirm-modal></app-confirm-modal>
 <div class="app-background w3-dark-grey">
 
     <app-header></app-header>
