--- a/Client/src/app/shared/confirm-modal/confirm-modal.component.scss
+++ b/Client/src/app/shared/confirm-modal/confirm-modal.component.scss
@@ -1,5 +1,32 @@
+@import '../../../styles.scss';
+
 .confirm-modal {
     position: absolute;
+    min-width: 100vw;
+    min-height: 100vh;
     justify-content: center;
     align-items: center;
+    background: #000000cc;
+}
+
+
+.dialog-container {
+    z-index: 999;
+    top: 30%;
+    width: 50%;
+    padding: 2rem;
+    border: 5px solid transparent;
+    border-top: 5px solid $text-orange;
+    border-bottom: 4px solid $text-orange;
+    background: linear-gradient(to right, transparent, $background-medium, transparent);
+}
+
+.dialog-message {
+    font-size: 2rem;
+    color: $text-default;
+}
+
+.button-container {
+    display: flex;
+    justify-content: flex-end;
 }
