--- a/Client/src/app/shared/page-loader/page-loader.component.scss
+++ b/Client/src/app/shared/page-loader/page-loader.component.scss
@@ -1,3 +1,5 @@
+@import '../../../styles.scss';
+
 .loader-container {
   position: absolute;
   min-width: 100vw;
@@ -10,15 +12,6 @@
   animation-name: loadanim;
   animation-duration: 0.5s;
   animation-iteration-count: infinite;
-}
-
-.no-select {
-    -webkit-user-select: none; /* Safari */        
-    -moz-user-select: none; /* Firefox */
-    -ms-user-select: none; /* IE10+/Edge */
-    user-select: none; /* Standard */
-    text-align: center;
-    text-decoration: none;
 }
 
 @keyframes loadanim {
