--- a/Client/src/app/shared/confirm-modal/confirm-modal.component.scss
+++ b/Client/src/app/shared/confirm-modal/confirm-modal.component.scss
@@ -30,3 +30,10 @@
     display: flex;
     justify-content: flex-end;
 }
+
+.confirm-dialog-btn {
+    width: 9rem;
+    &:hover {
+        background-color: transparent;
+    }
+}
