--- a/Client/src/app/components/app-components/ingredients/ingredient/ingredient.component.html
+++ b/Client/src/app/components/app-components/ingredients/ingredient/ingredient.component.html
@@ -1,3 +1,10 @@
-<div>
-    {{ ingredient.name }}
+<div class="flex-x flex-y">
+    <div class="w-40p">
+        {{ ingredient.name }}
+    </div>
+
+    <div class="w-20p">
+        <button class="btn-silver"><i class="fas fa-terminal"></i></button>
+        <button class="btn-silver"><i class="fas fa-dumpster"></i></button>
+    </div>
 </div>
