--- a/Client/src/app/components/app-components/ingredients/ingredients.component.scss
+++ b/Client/src/app/components/app-components/ingredients/ingredients.component.scss
@@ -2,23 +2,15 @@
 
 
 .action-btn {
-    width: 9rem;
+    &:hover {
+        border: none;
+    }
+    border: none;
+    font-size: 1.5rem;
 }
 
 .flex-even {
     justify-content: space-evenly;
-}
-
-.w-10p {
-    width: 10%;
-}
-
-.w-70p {
-    width: 70%;
-}
-
-.w-90p {
-    width: 90%;
 }
 
 .event-container {
@@ -43,4 +35,10 @@
 
 .self-center {
     margin: auto;
+}
+
+.ingredient-row {
+    padding: .2rem;
+    margin-bottom: .5rem;
+    background: linear-gradient(to right, $background-dark, $background-medium);
 }
