ingredients page - bugfixes; confirm dialog - bugfix

--- a/Client/src/app/components/app-components/ingredients/ingredients.component.html
+++ b/Client/src/app/components/app-components/ingredients/ingredients.component.html
@@ -44,3 +44,5 @@
     #acid
     (onConfirmed)="createCommand($event)">
 </app-create-ingredient-dialog>
+<button (click)="clogData()">test returned data</button>
+<button (click)="reseed()">ReseedDb</button>
