refactoring payload & reverse functionality

--- a/Client/src/app/components/app-components/ingredients/ingredients.component.html
+++ b/Client/src/app/components/app-components/ingredients/ingredients.component.html
@@ -30,7 +30,7 @@
                         <app-event-card 
                             (onChangeRevert)="revertToIndex($event)"
                             [index]="i"
-                            [event]="change.event"
+                            [commandType]="change.commandType"
                             [description]="change.description"
                         ></app-event-card>
                     </div>
