New commands & bugfixes

--- a/Client/src/app/components/app-components/ingredients/ingredient/ingredient.component.html
+++ b/Client/src/app/components/app-components/ingredients/ingredient/ingredient.component.html
@@ -4,7 +4,7 @@
     </div>
 
     <div class="w-20p">
-        <button class="btn-silver"><i class="fas fa-terminal"></i></button>
+        <button (click)="openEditDialog()" class="btn-silver"><i class="fas fa-terminal"></i></button>
         <button class="btn-silver"><i class="fas fa-dumpster"></i></button>
     </div>
 </div>
